--- a/sprawozdanie1/figures/part1/task5/estymata.tex
+++ b/sprawozdanie1/figures/part1/task5/estymata.tex
@@ -1,106 +1,106 @@
 % GNUPLOT: LaTeX picture
 \setlength{\unitlength}{0.240900pt}
 \ifx\plotpoint\undefined\newsavebox{\plotpoint}\fi
+\sbox{\plotpoint}{\rule[-0.200pt]{0.400pt}{0.400pt}}%
 \begin{picture}(1500,900)(0,0)
 \sbox{\plotpoint}{\rule[-0.200pt]{0.400pt}{0.400pt}}%
-\put(170.0,82.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150,82){\makebox(0,0)[r]{ 0.36}}
-\put(1419.0,82.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(170.0,168.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150,168){\makebox(0,0)[r]{ 0.365}}
-\put(1419.0,168.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(170.0,255.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150,255){\makebox(0,0)[r]{ 0.37}}
-\put(1419.0,255.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(170.0,341.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150,341){\makebox(0,0)[r]{ 0.375}}
-\put(1419.0,341.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(170.0,427.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150,427){\makebox(0,0)[r]{ 0.38}}
-\put(1419.0,427.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(170.0,514.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150,514){\makebox(0,0)[r]{ 0.385}}
-\put(1419.0,514.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(170.0,600.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150,600){\makebox(0,0)[r]{ 0.39}}
-\put(1419.0,600.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(170.0,686.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150,686){\makebox(0,0)[r]{ 0.395}}
-\put(1419.0,686.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(170.0,773.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150,773){\makebox(0,0)[r]{ 0.4}}
-\put(1419.0,773.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(170.0,859.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150,859){\makebox(0,0)[r]{ 0.405}}
+\put(211.0,131.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191,131){\makebox(0,0)[r]{ 0.36}}
+\put(1419.0,131.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(211.0,212.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191,212){\makebox(0,0)[r]{ 0.365}}
+\put(1419.0,212.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(211.0,293.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191,293){\makebox(0,0)[r]{ 0.37}}
+\put(1419.0,293.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(211.0,374.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191,374){\makebox(0,0)[r]{ 0.375}}
+\put(1419.0,374.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(211.0,455.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191,455){\makebox(0,0)[r]{ 0.38}}
+\put(1419.0,455.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(211.0,535.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191,535){\makebox(0,0)[r]{ 0.385}}
+\put(1419.0,535.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(211.0,616.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191,616){\makebox(0,0)[r]{ 0.39}}
+\put(1419.0,616.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(211.0,697.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191,697){\makebox(0,0)[r]{ 0.395}}
+\put(1419.0,697.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(211.0,778.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191,778){\makebox(0,0)[r]{ 0.4}}
+\put(1419.0,778.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(211.0,859.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191,859){\makebox(0,0)[r]{ 0.405}}
 \put(1419.0,859.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(170.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(170,41){\makebox(0,0){ 0.05}}
-\put(170.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(311.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(311,41){\makebox(0,0){ 0.1}}
-\put(311.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(452.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(452,41){\makebox(0,0){ 0.15}}
-\put(452.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(593.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(593,41){\makebox(0,0){ 0.2}}
-\put(593.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(734.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(734,41){\makebox(0,0){ 0.25}}
-\put(734.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(875.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(875,41){\makebox(0,0){ 0.3}}
-\put(875.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1016.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1016,41){\makebox(0,0){ 0.35}}
-\put(1016.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1157.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1157,41){\makebox(0,0){ 0.4}}
-\put(1157.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1298.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1298,41){\makebox(0,0){ 0.45}}
-\put(1298.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1439.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1439,41){\makebox(0,0){ 0.5}}
+\put(211.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(211,90){\makebox(0,0){ 0.05}}
+\put(211.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(347.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(347,90){\makebox(0,0){ 0.1}}
+\put(347.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(484.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(484,90){\makebox(0,0){ 0.15}}
+\put(484.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(620.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(620,90){\makebox(0,0){ 0.2}}
+\put(620.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(757.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(757,90){\makebox(0,0){ 0.25}}
+\put(757.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(893.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(893,90){\makebox(0,0){ 0.3}}
+\put(893.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1030.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1030,90){\makebox(0,0){ 0.35}}
+\put(1030.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1166.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1166,90){\makebox(0,0){ 0.4}}
+\put(1166.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1303.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1303,90){\makebox(0,0){ 0.45}}
+\put(1303.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1439.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1439,90){\makebox(0,0){ 0.5}}
 \put(1439.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(170.0,82.0){\rule[-0.200pt]{0.400pt}{187.179pt}}
-\put(170.0,82.0){\rule[-0.200pt]{305.702pt}{0.400pt}}
-\put(1439.0,82.0){\rule[-0.200pt]{0.400pt}{187.179pt}}
-\put(170.0,859.0){\rule[-0.200pt]{305.702pt}{0.400pt}}
-\put(1279,819){\makebox(0,0)[r]{"crosval.dat" using 1:4}}
-\put(1299.0,819.0){\rule[-0.200pt]{24.090pt}{0.400pt}}
-\put(170,807){\usebox{\plotpoint}}
-\multiput(170.00,805.92)(1.024,-0.499){135}{\rule{0.917pt}{0.120pt}}
-\multiput(170.00,806.17)(139.096,-69.000){2}{\rule{0.459pt}{0.400pt}}
-\multiput(311.00,736.92)(1.361,-0.498){101}{\rule{1.185pt}{0.120pt}}
-\multiput(311.00,737.17)(138.541,-52.000){2}{\rule{0.592pt}{0.400pt}}
-\multiput(452.00,684.92)(1.388,-0.498){99}{\rule{1.206pt}{0.120pt}}
-\multiput(452.00,685.17)(138.497,-51.000){2}{\rule{0.603pt}{0.400pt}}
-\multiput(593.00,633.92)(1.009,-0.499){137}{\rule{0.906pt}{0.120pt}}
-\multiput(593.00,634.17)(139.120,-70.000){2}{\rule{0.453pt}{0.400pt}}
-\multiput(734.00,563.92)(1.024,-0.499){135}{\rule{0.917pt}{0.120pt}}
-\multiput(734.00,564.17)(139.096,-69.000){2}{\rule{0.459pt}{0.400pt}}
-\multiput(875.00,494.92)(1.024,-0.499){135}{\rule{0.917pt}{0.120pt}}
-\multiput(875.00,495.17)(139.096,-69.000){2}{\rule{0.459pt}{0.400pt}}
-\multiput(1016.00,425.92)(0.685,-0.499){203}{\rule{0.648pt}{0.120pt}}
-\multiput(1016.00,426.17)(139.656,-103.000){2}{\rule{0.324pt}{0.400pt}}
-\multiput(1157.00,322.92)(0.583,-0.499){239}{\rule{0.566pt}{0.120pt}}
-\multiput(1157.00,323.17)(139.825,-121.000){2}{\rule{0.283pt}{0.400pt}}
-\multiput(1298.00,201.92)(0.678,-0.499){205}{\rule{0.642pt}{0.120pt}}
-\multiput(1298.00,202.17)(139.667,-104.000){2}{\rule{0.321pt}{0.400pt}}
-\put(170,807){\makebox(0,0){$+$}}
-\put(311,738){\makebox(0,0){$+$}}
-\put(452,686){\makebox(0,0){$+$}}
-\put(593,635){\makebox(0,0){$+$}}
-\put(734,565){\makebox(0,0){$+$}}
-\put(875,496){\makebox(0,0){$+$}}
-\put(1016,427){\makebox(0,0){$+$}}
-\put(1157,324){\makebox(0,0){$+$}}
-\put(1298,203){\makebox(0,0){$+$}}
-\put(1439,99){\makebox(0,0){$+$}}
-\put(1349,819){\makebox(0,0){$+$}}
-\put(170.0,82.0){\rule[-0.200pt]{0.400pt}{187.179pt}}
-\put(170.0,82.0){\rule[-0.200pt]{305.702pt}{0.400pt}}
-\put(1439.0,82.0){\rule[-0.200pt]{0.400pt}{187.179pt}}
-\put(170.0,859.0){\rule[-0.200pt]{305.702pt}{0.400pt}}
+\put(211.0,131.0){\rule[-0.200pt]{0.400pt}{175.375pt}}
+\put(211.0,131.0){\rule[-0.200pt]{295.825pt}{0.400pt}}
+\put(1439.0,131.0){\rule[-0.200pt]{0.400pt}{175.375pt}}
+\put(211.0,859.0){\rule[-0.200pt]{295.825pt}{0.400pt}}
+\put(30,495){\makebox(0,0){Estymata bˆ©du}}
+\put(825,29){\makebox(0,0){Pruning confidence level}}
+\put(211,810){\usebox{\plotpoint}}
+\multiput(211.00,808.92)(1.065,-0.499){125}{\rule{0.950pt}{0.120pt}}
+\multiput(211.00,809.17)(134.028,-64.000){2}{\rule{0.475pt}{0.400pt}}
+\multiput(347.00,744.92)(1.404,-0.498){95}{\rule{1.218pt}{0.120pt}}
+\multiput(347.00,745.17)(134.471,-49.000){2}{\rule{0.609pt}{0.400pt}}
+\multiput(484.00,695.92)(1.423,-0.498){93}{\rule{1.233pt}{0.120pt}}
+\multiput(484.00,696.17)(133.440,-48.000){2}{\rule{0.617pt}{0.400pt}}
+\multiput(620.00,647.92)(1.056,-0.499){127}{\rule{0.943pt}{0.120pt}}
+\multiput(620.00,648.17)(135.043,-65.000){2}{\rule{0.472pt}{0.400pt}}
+\multiput(757.00,582.92)(1.048,-0.499){127}{\rule{0.937pt}{0.120pt}}
+\multiput(757.00,583.17)(134.055,-65.000){2}{\rule{0.468pt}{0.400pt}}
+\multiput(893.00,517.92)(1.073,-0.499){125}{\rule{0.956pt}{0.120pt}}
+\multiput(893.00,518.17)(135.015,-64.000){2}{\rule{0.478pt}{0.400pt}}
+\multiput(1030.00,453.92)(0.694,-0.499){193}{\rule{0.655pt}{0.120pt}}
+\multiput(1030.00,454.17)(134.640,-98.000){2}{\rule{0.328pt}{0.400pt}}
+\multiput(1166.00,355.92)(0.606,-0.499){223}{\rule{0.585pt}{0.120pt}}
+\multiput(1166.00,356.17)(135.786,-113.000){2}{\rule{0.292pt}{0.400pt}}
+\multiput(1303.00,242.92)(0.701,-0.499){191}{\rule{0.661pt}{0.120pt}}
+\multiput(1303.00,243.17)(134.628,-97.000){2}{\rule{0.330pt}{0.400pt}}
+\put(211,810){\makebox(0,0){$+$}}
+\put(347,746){\makebox(0,0){$+$}}
+\put(484,697){\makebox(0,0){$+$}}
+\put(620,649){\makebox(0,0){$+$}}
+\put(757,584){\makebox(0,0){$+$}}
+\put(893,519){\makebox(0,0){$+$}}
+\put(1030,455){\makebox(0,0){$+$}}
+\put(1166,357){\makebox(0,0){$+$}}
+\put(1303,244){\makebox(0,0){$+$}}
+\put(1439,147){\makebox(0,0){$+$}}
+\put(211.0,131.0){\rule[-0.200pt]{0.400pt}{175.375pt}}
+\put(211.0,131.0){\rule[-0.200pt]{295.825pt}{0.400pt}}
+\put(1439.0,131.0){\rule[-0.200pt]{0.400pt}{175.375pt}}
+\put(211.0,859.0){\rule[-0.200pt]{295.825pt}{0.400pt}}
 \end{picture}
