--- a/sprawozdanie1/figures/part1/task5/rozmiar.tex
+++ b/sprawozdanie1/figures/part1/task5/rozmiar.tex
@@ -3,97 +3,96 @@
 \ifx\plotpoint\undefined\newsavebox{\plotpoint}\fi
 \begin{picture}(1500,900)(0,0)
 \sbox{\plotpoint}{\rule[-0.200pt]{0.400pt}{0.400pt}}%
-\put(110.0,82.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(90,82){\makebox(0,0)[r]{ 5}}
-\put(1419.0,82.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(110.0,193.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(90,193){\makebox(0,0)[r]{ 10}}
-\put(1419.0,193.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(110.0,304.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(90,304){\makebox(0,0)[r]{ 15}}
-\put(1419.0,304.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(110.0,415.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(90,415){\makebox(0,0)[r]{ 20}}
-\put(1419.0,415.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(110.0,526.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(90,526){\makebox(0,0)[r]{ 25}}
-\put(1419.0,526.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(110.0,637.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(90,637){\makebox(0,0)[r]{ 30}}
-\put(1419.0,637.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(110.0,748.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(90,748){\makebox(0,0)[r]{ 35}}
-\put(1419.0,748.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(110.0,859.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(90,859){\makebox(0,0)[r]{ 40}}
+\put(151.0,131.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,131){\makebox(0,0)[r]{ 5}}
+\put(1419.0,131.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(151.0,235.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,235){\makebox(0,0)[r]{ 10}}
+\put(1419.0,235.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(151.0,339.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,339){\makebox(0,0)[r]{ 15}}
+\put(1419.0,339.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(151.0,443.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,443){\makebox(0,0)[r]{ 20}}
+\put(1419.0,443.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(151.0,547.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,547){\makebox(0,0)[r]{ 25}}
+\put(1419.0,547.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(151.0,651.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,651){\makebox(0,0)[r]{ 30}}
+\put(1419.0,651.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(151.0,755.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,755){\makebox(0,0)[r]{ 35}}
+\put(1419.0,755.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(151.0,859.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,859){\makebox(0,0)[r]{ 40}}
 \put(1419.0,859.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(110.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(110,41){\makebox(0,0){ 0.05}}
-\put(110.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(258.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(258,41){\makebox(0,0){ 0.1}}
-\put(258.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(405.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(405,41){\makebox(0,0){ 0.15}}
-\put(405.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(553.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(553,41){\makebox(0,0){ 0.2}}
-\put(553.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(701.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(701,41){\makebox(0,0){ 0.25}}
-\put(701.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(848.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(848,41){\makebox(0,0){ 0.3}}
-\put(848.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(996.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(996,41){\makebox(0,0){ 0.35}}
-\put(996.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1144.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1144,41){\makebox(0,0){ 0.4}}
-\put(1144.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1291.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1291,41){\makebox(0,0){ 0.45}}
-\put(1291.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1439.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1439,41){\makebox(0,0){ 0.5}}
+\put(151.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(151,90){\makebox(0,0){ 0.05}}
+\put(151.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(294.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(294,90){\makebox(0,0){ 0.1}}
+\put(294.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(437.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(437,90){\makebox(0,0){ 0.15}}
+\put(437.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(580.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(580,90){\makebox(0,0){ 0.2}}
+\put(580.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(723.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(723,90){\makebox(0,0){ 0.25}}
+\put(723.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(867.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(867,90){\makebox(0,0){ 0.3}}
+\put(867.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1010.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1010,90){\makebox(0,0){ 0.35}}
+\put(1010.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1153.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1153,90){\makebox(0,0){ 0.4}}
+\put(1153.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1296.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1296,90){\makebox(0,0){ 0.45}}
+\put(1296.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1439.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1439,90){\makebox(0,0){ 0.5}}
 \put(1439.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(110.0,82.0){\rule[-0.200pt]{0.400pt}{187.179pt}}
-\put(110.0,82.0){\rule[-0.200pt]{320.156pt}{0.400pt}}
-\put(1439.0,82.0){\rule[-0.200pt]{0.400pt}{187.179pt}}
-\put(110.0,859.0){\rule[-0.200pt]{320.156pt}{0.400pt}}
-\put(1279,819){\makebox(0,0)[r]{"crosval.dat" using 1:2}}
-\put(1299.0,819.0){\rule[-0.200pt]{24.090pt}{0.400pt}}
-\put(110,184){\usebox{\plotpoint}}
-\multiput(110.58,184.00)(0.499,0.547){293}{\rule{0.120pt}{0.538pt}}
-\multiput(109.17,184.00)(148.000,160.884){2}{\rule{0.400pt}{0.269pt}}
-\multiput(405.00,346.58)(5.849,0.493){23}{\rule{4.654pt}{0.119pt}}
-\multiput(405.00,345.17)(138.341,13.000){2}{\rule{2.327pt}{0.400pt}}
-\multiput(553.00,359.58)(0.788,0.499){185}{\rule{0.730pt}{0.120pt}}
-\multiput(553.00,358.17)(146.485,94.000){2}{\rule{0.365pt}{0.400pt}}
-\multiput(701.00,453.58)(1.189,0.499){121}{\rule{1.048pt}{0.120pt}}
-\multiput(701.00,452.17)(144.824,62.000){2}{\rule{0.524pt}{0.400pt}}
-\multiput(848.00,515.58)(1.582,0.498){91}{\rule{1.360pt}{0.120pt}}
-\multiput(848.00,514.17)(145.178,47.000){2}{\rule{0.680pt}{0.400pt}}
-\multiput(996.00,562.58)(0.587,0.499){249}{\rule{0.570pt}{0.120pt}}
-\multiput(996.00,561.17)(146.817,126.000){2}{\rule{0.285pt}{0.400pt}}
-\multiput(1144.00,688.58)(1.271,0.499){113}{\rule{1.114pt}{0.120pt}}
-\multiput(1144.00,687.17)(144.688,58.000){2}{\rule{0.557pt}{0.400pt}}
-\multiput(1291.00,746.58)(1.401,0.498){103}{\rule{1.217pt}{0.120pt}}
-\multiput(1291.00,745.17)(145.474,53.000){2}{\rule{0.608pt}{0.400pt}}
-\put(110,184){\makebox(0,0){$+$}}
-\put(258,346){\makebox(0,0){$+$}}
-\put(405,346){\makebox(0,0){$+$}}
-\put(553,359){\makebox(0,0){$+$}}
-\put(701,453){\makebox(0,0){$+$}}
-\put(848,515){\makebox(0,0){$+$}}
-\put(996,562){\makebox(0,0){$+$}}
-\put(1144,688){\makebox(0,0){$+$}}
-\put(1291,746){\makebox(0,0){$+$}}
-\put(1439,799){\makebox(0,0){$+$}}
-\put(1349,819){\makebox(0,0){$+$}}
-\put(258.0,346.0){\rule[-0.200pt]{35.412pt}{0.400pt}}
-\put(110.0,82.0){\rule[-0.200pt]{0.400pt}{187.179pt}}
-\put(110.0,82.0){\rule[-0.200pt]{320.156pt}{0.400pt}}
-\put(1439.0,82.0){\rule[-0.200pt]{0.400pt}{187.179pt}}
-\put(110.0,859.0){\rule[-0.200pt]{320.156pt}{0.400pt}}
+\put(151.0,131.0){\rule[-0.200pt]{0.400pt}{175.375pt}}
+\put(151.0,131.0){\rule[-0.200pt]{310.279pt}{0.400pt}}
+\put(1439.0,131.0){\rule[-0.200pt]{0.400pt}{175.375pt}}
+\put(151.0,859.0){\rule[-0.200pt]{310.279pt}{0.400pt}}
+\put(30,495){\makebox(0,0){Rozmiar}}
+\put(795,29){\makebox(0,0){Pruning confidence level}}
+\put(151,227){\usebox{\plotpoint}}
+\multiput(151.58,227.00)(0.499,0.531){283}{\rule{0.120pt}{0.525pt}}
+\multiput(150.17,227.00)(143.000,150.910){2}{\rule{0.400pt}{0.263pt}}
+\multiput(437.00,379.58)(6.140,0.492){21}{\rule{4.867pt}{0.119pt}}
+\multiput(437.00,378.17)(132.899,12.000){2}{\rule{2.433pt}{0.400pt}}
+\multiput(580.00,391.58)(0.823,0.499){171}{\rule{0.757pt}{0.120pt}}
+\multiput(580.00,390.17)(141.428,87.000){2}{\rule{0.379pt}{0.400pt}}
+\multiput(723.00,478.58)(1.224,0.499){115}{\rule{1.076pt}{0.120pt}}
+\multiput(723.00,477.17)(141.766,59.000){2}{\rule{0.538pt}{0.400pt}}
+\multiput(867.00,537.58)(1.671,0.498){83}{\rule{1.430pt}{0.120pt}}
+\multiput(867.00,536.17)(140.031,43.000){2}{\rule{0.715pt}{0.400pt}}
+\multiput(1010.00,580.58)(0.601,0.499){235}{\rule{0.581pt}{0.120pt}}
+\multiput(1010.00,579.17)(141.795,119.000){2}{\rule{0.290pt}{0.400pt}}
+\multiput(1153.00,699.58)(1.329,0.498){105}{\rule{1.159pt}{0.120pt}}
+\multiput(1153.00,698.17)(140.594,54.000){2}{\rule{0.580pt}{0.400pt}}
+\multiput(1296.00,753.58)(1.436,0.498){97}{\rule{1.244pt}{0.120pt}}
+\multiput(1296.00,752.17)(140.418,50.000){2}{\rule{0.622pt}{0.400pt}}
+\put(151,227){\makebox(0,0){$+$}}
+\put(294,379){\makebox(0,0){$+$}}
+\put(437,379){\makebox(0,0){$+$}}
+\put(580,391){\makebox(0,0){$+$}}
+\put(723,478){\makebox(0,0){$+$}}
+\put(867,537){\makebox(0,0){$+$}}
+\put(1010,580){\makebox(0,0){$+$}}
+\put(1153,699){\makebox(0,0){$+$}}
+\put(1296,753){\makebox(0,0){$+$}}
+\put(1439,803){\makebox(0,0){$+$}}
+\put(294.0,379.0){\rule[-0.200pt]{34.449pt}{0.400pt}}
+\put(151.0,131.0){\rule[-0.200pt]{0.400pt}{175.375pt}}
+\put(151.0,131.0){\rule[-0.200pt]{310.279pt}{0.400pt}}
+\put(1439.0,131.0){\rule[-0.200pt]{0.400pt}{175.375pt}}
+\put(151.0,859.0){\rule[-0.200pt]{310.279pt}{0.400pt}}
 \end{picture}
