--- a/sprawozdanie1/part1-trees.tex
+++ b/sprawozdanie1/part1-trees.tex
@@ -127,12 +127,11 @@ Każdy klient opisany jest za pomocą 15 atrybutóW, w tym 6 atrybutów przyjmuj
 
 \begin{itemize}
 \item średniego (po \emph{cross-validation}) rozmiaru drzewa uproszczonego,
-\\ \input{figures/part1/task5/rozmiar.tex}
+\\ \includegraphics[scale=0.7]{figures/part1/task5/rozmiar.pdf} 
 \item średniej trafności klasyfikowania drzewa uproszczonego na~zbiorze testującym,
-\\ \input{figures/part1/task5/trafnosc.tex}
-\\ \input{figures/part1/task5/file.tex}
+\\ \includegraphics[scale=0.7]{figures/part1/task5/trafnosc.pdf}
 \item średniej estymaty błędu dla drzewa uproszczonego
-\\ \input{figures/part1/task5/estymata.tex}
+\\ \includegraphics[scale=0.7]{figures/part1/task5/estymata.pdf}
 \end{itemize}
 
 ...w funkcji poziomu ufności (odnieś te wyniki do średniej charakterystyki drzewa oryginalnego, nieuproszczonego).
