--- a/sprawozdanie1/figures/part1/task5/trafnosc.tex
+++ b/sprawozdanie1/figures/part1/task5/trafnosc.tex
@@ -3,96 +3,95 @@
 \ifx\plotpoint\undefined\newsavebox{\plotpoint}\fi
 \begin{picture}(1500,900)(0,0)
 \sbox{\plotpoint}{\rule[-0.200pt]{0.400pt}{0.400pt}}%
-\put(150.0,82.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(130,82){\makebox(0,0)[r]{ 0.56}}
-\put(1419.0,82.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150.0,193.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(130,193){\makebox(0,0)[r]{ 0.57}}
-\put(1419.0,193.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150.0,304.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(130,304){\makebox(0,0)[r]{ 0.58}}
-\put(1419.0,304.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150.0,415.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(130,415){\makebox(0,0)[r]{ 0.59}}
-\put(1419.0,415.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150.0,526.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(130,526){\makebox(0,0)[r]{ 0.6}}
-\put(1419.0,526.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150.0,637.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(130,637){\makebox(0,0)[r]{ 0.61}}
-\put(1419.0,637.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150.0,748.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(130,748){\makebox(0,0)[r]{ 0.62}}
-\put(1419.0,748.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150.0,859.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(130,859){\makebox(0,0)[r]{ 0.63}}
+\put(191.0,131.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,131){\makebox(0,0)[r]{ 0.56}}
+\put(1419.0,131.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191.0,235.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,235){\makebox(0,0)[r]{ 0.57}}
+\put(1419.0,235.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191.0,339.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,339){\makebox(0,0)[r]{ 0.58}}
+\put(1419.0,339.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191.0,443.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,443){\makebox(0,0)[r]{ 0.59}}
+\put(1419.0,443.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191.0,547.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,547){\makebox(0,0)[r]{ 0.6}}
+\put(1419.0,547.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191.0,651.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,651){\makebox(0,0)[r]{ 0.61}}
+\put(1419.0,651.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191.0,755.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,755){\makebox(0,0)[r]{ 0.62}}
+\put(1419.0,755.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191.0,859.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,859){\makebox(0,0)[r]{ 0.63}}
 \put(1419.0,859.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(150.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(150,41){\makebox(0,0){ 0.05}}
-\put(150.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(293.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(293,41){\makebox(0,0){ 0.1}}
-\put(293.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(436.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(436,41){\makebox(0,0){ 0.15}}
-\put(436.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(580.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(580,41){\makebox(0,0){ 0.2}}
-\put(580.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(723.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(723,41){\makebox(0,0){ 0.25}}
-\put(723.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(866.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(866,41){\makebox(0,0){ 0.3}}
-\put(866.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1009.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1009,41){\makebox(0,0){ 0.35}}
-\put(1009.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1153.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1153,41){\makebox(0,0){ 0.4}}
-\put(1153.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1296.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1296,41){\makebox(0,0){ 0.45}}
-\put(1296.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1439.0,82.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1439,41){\makebox(0,0){ 0.5}}
+\put(191.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(191,90){\makebox(0,0){ 0.05}}
+\put(191.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(330.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(330,90){\makebox(0,0){ 0.1}}
+\put(330.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(468.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(468,90){\makebox(0,0){ 0.15}}
+\put(468.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(607.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(607,90){\makebox(0,0){ 0.2}}
+\put(607.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(746.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(746,90){\makebox(0,0){ 0.25}}
+\put(746.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(884.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(884,90){\makebox(0,0){ 0.3}}
+\put(884.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1023.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1023,90){\makebox(0,0){ 0.35}}
+\put(1023.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1162.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1162,90){\makebox(0,0){ 0.4}}
+\put(1162.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1300.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1300,90){\makebox(0,0){ 0.45}}
+\put(1300.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1439.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1439,90){\makebox(0,0){ 0.5}}
 \put(1439.0,839.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(150.0,82.0){\rule[-0.200pt]{0.400pt}{187.179pt}}
-\put(150.0,82.0){\rule[-0.200pt]{310.520pt}{0.400pt}}
-\put(1439.0,82.0){\rule[-0.200pt]{0.400pt}{187.179pt}}
-\put(150.0,859.0){\rule[-0.200pt]{310.520pt}{0.400pt}}
-\put(1279,819){\makebox(0,0)[r]{"crosval.dat" using 1:3}}
-\put(1299.0,819.0){\rule[-0.200pt]{24.090pt}{0.400pt}}
-\put(150,570){\usebox{\plotpoint}}
-\multiput(150.00,570.58)(1.070,0.499){131}{\rule{0.954pt}{0.120pt}}
-\multiput(150.00,569.17)(141.020,67.000){2}{\rule{0.477pt}{0.400pt}}
-\multiput(436.00,637.58)(0.590,0.499){241}{\rule{0.572pt}{0.120pt}}
-\multiput(436.00,636.17)(142.813,122.000){2}{\rule{0.286pt}{0.400pt}}
-\multiput(580.58,754.08)(0.499,-1.358){283}{\rule{0.120pt}{1.185pt}}
-\multiput(579.17,756.54)(143.000,-385.540){2}{\rule{0.400pt}{0.593pt}}
-\multiput(723.00,369.92)(0.533,-0.499){265}{\rule{0.527pt}{0.120pt}}
-\multiput(723.00,370.17)(141.906,-134.000){2}{\rule{0.263pt}{0.400pt}}
-\multiput(866.00,235.92)(0.537,-0.499){263}{\rule{0.530pt}{0.120pt}}
-\multiput(866.00,236.17)(141.900,-133.000){2}{\rule{0.265pt}{0.400pt}}
-\multiput(1009.00,104.58)(0.541,0.499){263}{\rule{0.533pt}{0.120pt}}
-\multiput(1009.00,103.17)(142.894,133.000){2}{\rule{0.267pt}{0.400pt}}
-\put(293.0,637.0){\rule[-0.200pt]{34.449pt}{0.400pt}}
-\multiput(1296.00,235.92)(1.086,-0.499){129}{\rule{0.967pt}{0.120pt}}
-\multiput(1296.00,236.17)(140.994,-66.000){2}{\rule{0.483pt}{0.400pt}}
-\put(150,570){\makebox(0,0){$+$}}
-\put(293,637){\makebox(0,0){$+$}}
-\put(436,637){\makebox(0,0){$+$}}
-\put(580,759){\makebox(0,0){$+$}}
-\put(723,371){\makebox(0,0){$+$}}
-\put(866,237){\makebox(0,0){$+$}}
-\put(1009,104){\makebox(0,0){$+$}}
-\put(1153,237){\makebox(0,0){$+$}}
-\put(1296,237){\makebox(0,0){$+$}}
-\put(1439,171){\makebox(0,0){$+$}}
-\put(1349,819){\makebox(0,0){$+$}}
-\put(1153.0,237.0){\rule[-0.200pt]{34.449pt}{0.400pt}}
-\put(150.0,82.0){\rule[-0.200pt]{0.400pt}{187.179pt}}
-\put(150.0,82.0){\rule[-0.200pt]{310.520pt}{0.400pt}}
-\put(1439.0,82.0){\rule[-0.200pt]{0.400pt}{187.179pt}}
-\put(150.0,859.0){\rule[-0.200pt]{310.520pt}{0.400pt}}
+\put(191.0,131.0){\rule[-0.200pt]{0.400pt}{175.375pt}}
+\put(191.0,131.0){\rule[-0.200pt]{300.643pt}{0.400pt}}
+\put(1439.0,131.0){\rule[-0.200pt]{0.400pt}{175.375pt}}
+\put(191.0,859.0){\rule[-0.200pt]{300.643pt}{0.400pt}}
+\put(30,495){\makebox(0,0){Trafno˜†}}
+\put(815,29){\makebox(0,0){Pruning confidence level}}
+\put(191,589){\usebox{\plotpoint}}
+\multiput(191.00,589.58)(1.124,0.499){121}{\rule{0.997pt}{0.120pt}}
+\multiput(191.00,588.17)(136.931,62.000){2}{\rule{0.498pt}{0.400pt}}
+\multiput(468.00,651.58)(0.610,0.499){225}{\rule{0.588pt}{0.120pt}}
+\multiput(468.00,650.17)(137.780,114.000){2}{\rule{0.294pt}{0.400pt}}
+\multiput(607.58,760.24)(0.499,-1.311){275}{\rule{0.120pt}{1.147pt}}
+\multiput(606.17,762.62)(139.000,-361.618){2}{\rule{0.400pt}{0.574pt}}
+\multiput(746.00,399.92)(0.556,-0.499){245}{\rule{0.545pt}{0.120pt}}
+\multiput(746.00,400.17)(136.868,-124.000){2}{\rule{0.273pt}{0.400pt}}
+\multiput(884.00,275.92)(0.556,-0.499){247}{\rule{0.545pt}{0.120pt}}
+\multiput(884.00,276.17)(137.869,-125.000){2}{\rule{0.272pt}{0.400pt}}
+\multiput(1023.00,152.58)(0.556,0.499){247}{\rule{0.545pt}{0.120pt}}
+\multiput(1023.00,151.17)(137.869,125.000){2}{\rule{0.272pt}{0.400pt}}
+\put(330.0,651.0){\rule[-0.200pt]{33.244pt}{0.400pt}}
+\multiput(1300.00,275.92)(1.106,-0.499){123}{\rule{0.983pt}{0.120pt}}
+\multiput(1300.00,276.17)(136.961,-63.000){2}{\rule{0.491pt}{0.400pt}}
+\put(191,589){\makebox(0,0){$+$}}
+\put(330,651){\makebox(0,0){$+$}}
+\put(468,651){\makebox(0,0){$+$}}
+\put(607,765){\makebox(0,0){$+$}}
+\put(746,401){\makebox(0,0){$+$}}
+\put(884,277){\makebox(0,0){$+$}}
+\put(1023,152){\makebox(0,0){$+$}}
+\put(1162,277){\makebox(0,0){$+$}}
+\put(1300,277){\makebox(0,0){$+$}}
+\put(1439,214){\makebox(0,0){$+$}}
+\put(1162.0,277.0){\rule[-0.200pt]{33.244pt}{0.400pt}}
+\put(191.0,131.0){\rule[-0.200pt]{0.400pt}{175.375pt}}
+\put(191.0,131.0){\rule[-0.200pt]{300.643pt}{0.400pt}}
+\put(1439.0,131.0){\rule[-0.200pt]{0.400pt}{175.375pt}}
+\put(191.0,859.0){\rule[-0.200pt]{300.643pt}{0.400pt}}
 \end{picture}
