Some changes in part 2.

--- a/sprawozdanie1/part2-rules.tex
+++ b/sprawozdanie1/part2-rules.tex
@@ -26,9 +26,10 @@
 \input{figures/part2/task2/vote-rules-cv}
 	\\Wyniki uzyskane z~programu \emph{C4.5 for windows} zostały przedstawione następująco: dla zbioru \emph{golf} w~Tab.~\ref{p2t2-golf-trees-cv} oraz Tab.~\ref{p2t2-golf-rules-cv}, dla zbioru \emph{vote} w~Tab.~\ref{p2t2-vote-trees-cv} oraz Tab.~\ref{p2t2-vote-rules-cv}.
 
-\item Porównaj wyniki pod kątem trafności klasyfikowania na zbiorze testującym oraz rozmiaru opisu.
+\item \textbf{Porównaj wyniki pod kątem trafności klasyfikowania na zbiorze testującym oraz rozmiaru opisu.}
 	
-\include{figures/part2/task2/compare-errors}
+	\include{figures/part2/task2/compare-errors}
+	\\Blah blah
 	
 \item Przeprowadzając kilka eksperymentów uczenia i~testowania przeanalizuj wpływ parametrów \emph{Confidence Level} i~\emph{Redundancy Factor} na~otrzymywany zbiór reguł.
 \end{itemize}
