--- a/sprawozdanie1/figures/part2/task2/compare-errors.tex
+++ b/sprawozdanie1/figures/part2/task2/compare-errors.tex
@@ -1,5 +1,5 @@
-\begin{figure}[hth]
-	\includegraphics[scale=0.7]{figures/part2/task2/compare-errors.pdf} 
+\begin{figure}
+	\includegraphics[scale=0.7]{gnuplot/compare-errors.pdf} 
 	\caption{Błędy klasyfikowania na zbiorze testującym.}
 	\label{p2t2-compare-errors}
 \end{figure}
